--- a/www/Data/_views/Layout.cshtml
+++ b/www/Data/_views/Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!doctype html>
+@model www.ClientModel
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -14,32 +15,14 @@
     <link type="text/css"
           rel="stylesheet"
           href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css" />
-    <link rel="stylesheet" href="/@Model.clientGUID/bundle.css">
+    <link rel="stylesheet" href="/@Model.ClientGUID/bundle.css">
     <title>Hello, world!</title>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8 text-center">
-                <h1>Hello, world!</h1>
-                <h3>Client: @Model.clientGUID</h3>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div id="app">
-                    <h3>{{ message }}</h3>
-                    <b-alert show>Default Alert</b-alert>
-                </div>
-                <div id="client"><h2>{{ clientMessage }}</h2></div>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript" src="/@Model.clientGUID/bundle.js"></script>
+    @RenderSection("Index")    
+    <script type="text/javascript" src="/@Model.ClientGUID/bundle.js"></script>
 </body>
 </html>
