--- a/www/Data/_views/Index.cshtml
+++ b/www/Data/_views/Index.cshtml
@@ -1,29 +1,47 @@
 ﻿@{
-    Layout = "Layout.cshtml";
+    Layout = "/_views/Layout.cshtml";
 }
-@section Index {
-    Here is my Index Section
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8 text-center">
-                <h1>Hello, world!</h1>
-                <h3>Client: @Model.ClientGUID :: @Model.Title</h3>
-            </div>
-            <div class="col-md-2"></div>
+
+@section HeaderCSS {
+    <link rel="stylesheet" href="/@Model.ClientGUID/bundle.css">
+}
+
+@section HeaderContent
+    {
+    <h1 class="display-4 text-white mt-5 mb-2">Client :: @Model.Title</h1>
+    <p class="lead mb-5 text-white-50">Homepage for @Model.Title.  CSS, Views and Javascript are loaded specifically for this customer.</p>
+}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
+            <h1>Hello, world!</h1>
+            <h3>Client: @Model.ClientGUID :: @Model.Title</h3>
         </div>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div id="app">
-                    <h3>{{ message }}</h3>
-                    <b-alert show>Default Alert</b-alert>
-                </div>
-                <div id="client">
-                    <h2>{{ clientMessage }}</h2>
-                </div>
-
-
+        <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div id="app">
+                <h3>{{ message }}</h3>
+                <b-alert show>Default Alert</b-alert>
             </div>
+            <div id="client">
+                <h2>{{ clientMessage }}</h2>
+            </div>
+
+
         </div>
     </div>
+</div>
+
+
+@section FooterScripts{
+
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+
+    <script type="text/javascript" src="/@Model.ClientGUID/bundle.js"></script>
 }
