--- a/www/_views/Layout.cshtml
+++ b/www/_views/Layout.cshtml
@@ -78,6 +78,10 @@
         </div>
         <!-- /.container -->
     </footer>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
+    <script src="https://unpkg.com/vue-resource@1.5.1/dist/vue-resource.min.js"></script>
     @RenderSection("FooterScripts", false)
 </body>
 
