--- a/www/_views/Index.cshtml
+++ b/www/_views/Index.cshtml
@@ -17,16 +17,26 @@
             <p>This project serves to demo some of the capabilities of Nancy, VueJS and other technologies.  It can be used as a starting point for your own development and for collaborating with other brands.</p>
             <p>
                 Currently this site uses the following technologies:
-                <ul>
-                    <li>.Net Core v2.2</li>
-                    <li>Nancy v2.0.0</li>
-                    <li>Nancy JWT Authentication</li>
-                    <li>Bootstrap v4.3.1</li>
-                    <li>Dapper</li>
-                    <li>MySQL</li>
-                    <li>Razor View Engine (Custom built Nancy Integration)</li>
-                    <li>BundlerMinifier</li>
-                </ul>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <ul>
+                            <li>.Net Core v2.2</li>
+                            <li>Nancy v2.0.0</li>
+                            <li>Nancy JWT Authentication</li>
+                            <li>Bootstrap v4.3.1</li>
+                            <li>Dapper</li>
+                            <li>MySQL</li>
+                            <li>Razor View Engine (Custom built Nancy Integration)</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6">
+                        <ul>
+                            <li>BundlerMinifier</li>
+                            <li>JWT</li>
+                            <li>AWS SQS</li>
+                        </ul>
+                    </div>
+                </div>
             </p>
         </div>
         <div class="col-md-4 mb-5">
