--- a/www/Data/Clients/One/_css/clientOne.less
+++ b/www/Data/Clients/One/_css/clientOne.less
@@ -1,8 +1,3 @@
-﻿body {
-    font-size: 8px;
-    color: red;
-}
-
-.container {
-    border: 5px solid yellow;
+﻿.client .square {
+    background-color: #6f42c1;
 }
