--- a/www/Data/_css/root.less
+++ b/www/Data/_css/root.less
@@ -1,8 +1,6 @@
-﻿body {
-    font-size: 30px;
-}
-
-.container
-{
-    border: 1px solid green;
+﻿.square {
+    width: 200px;
+    height: 200px;
+    margin: auto;
+    background-color: #007bff
 }
